--- a/package.json
+++ b/package.json
@@ -4,45 +4,45 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build --configuration production",
     "test": "ng test",
     "test-headless": "ng test --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.1.2",
-    "@angular/common": "~11.1.2",
-    "@angular/compiler": "~11.1.2",
-    "@angular/core": "~11.1.2",
-    "@angular/forms": "~11.1.2",
-    "@angular/platform-browser": "~11.1.2",
-    "@angular/platform-browser-dynamic": "~11.1.2",
-    "@angular/router": "~11.1.2",
+    "@angular/animations": "~12.1.3",
+    "@angular/common": "~12.1.3",
+    "@angular/compiler": "~12.1.3",
+    "@angular/core": "~12.1.3",
+    "@angular/forms": "~12.1.3",
+    "@angular/platform-browser": "~12.1.3",
+    "@angular/platform-browser-dynamic": "~12.1.3",
+    "@angular/router": "~12.1.3",
     "rxjs": "~6.5.4",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1101.2",
-    "@angular/cli": "~11.1.2",
-    "@angular/compiler-cli": "~11.1.2",
-    "@angular/language-service": "~11.1.2",
+    "@angular-devkit/build-angular": "~12.1.3",
+    "@angular/cli": "~12.1.3",
+    "@angular/compiler-cli": "~12.1.3",
+    "@angular/language-service": "~12.1.3",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.2.3",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^11.1.3",
+    "ng-packagr": "^12.1.2",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.3"
+    "typescript": "~4.3.5"
   }
 }
